Ver.
------------------------
- Feature - IsPublic and Content properties added to report (migration added)(#56)
- Feature - HasChildren prop added to OrganizationDto class (#61)

Ver. 2.5.0 - 2021-10-22
------------------------
- Feature - Organization MembersHaveTaxCode property added (migration added)(#58)
- Feature - ParentId filter in GetOrganizatins API and IsNewUser property added to Person class (migration added)(#60)

Ver. 2.4.2 - 2021-10-12
------------------------
- Bugfix - GetLayers with Tiles list

Ver. 2.4.1 - 2021-10-05
------------------------
- Feature - LayerDto and GetLayerDefinition API update

Ver. 2.4.0 - 2021-10-01
------------------------
- Feature - Importer module added (#52)
- Feature - Layers definition and GetLayers function implementation (migration added)(#53)

Ver. 2.3.1 - 2021-09-23
------------------------
- Feature - MapRequest management in GetFeatureCollection api (#50)
- BugFix - GetEntityById permission and visibility fix (#51)

Ver. 2.3.0 - 2021-09-16
-------------------------
- Feature - MapRequest management added (migration added) (#45)

Ver. 2.2.1 - 2021-09.14
-------------------------
- Feature - Organization name prop added to CommunicationDto class (#48)

Ver. 2.2.0 - 2021-09-13
-------------------------
- Feature - Spanish language support added (#46)
- Feature - GetOrganization api added to ts-sdk (#47)

Ver. 2.1.2 - 2021-08-06
--------------------------
- Feature - Filter update for GetFeatureCollections (#43)

Ver. 2.1.1 - 2021-08-06
--------------------------
- Feature - Category min/max value as string (migration added)(#44)

Ver. 2.1.0 - 2021-08-05
--------------------------
- Feature - Tips management added (migration added)(#27)
- Feature - Quizzes management added (migration added)(#41)
- Feature - Answers management added (migration added)(#42)

Ver. 2.0.0 - 2021-07-30
---------------------------
- Bugfix - Set default role for new users (#33)
- Bugfix - Search filter case insensitive (#35)