@@ -1,0 +1,11 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace Ermes.Layers.Dto
+{
+    public class ImporterLayerList
+    {
+        public List<ImporterLayerGroup> Items { get; set; }
+    }
+}
