@@ -1,0 +1,12 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace Ermes.Layers.Dto
+{
+    public class LayerDetailsDto
+    {
+        public string Name { get; set; }
+        public List<DateTime> Timestamps { get; set; }
+    }
+}
